--- a/Saudi_Araabia.mw
+++ b/Saudi_Araabia.mw
@@ -14,6 +14,7 @@ Internetitunnus=[[.sa]]
 '''Saudi Araabia''' om [[Aasia]] [[Lähkü-Hummogumaa]] riik, mink pääliin om [[Riad]]. 
 
 == Aolugu ==
+vöro kro stdgu dfratu glasder
 
 == Poliitiga ==
 
