--- a/Pikkjärv_(Karula).mw
+++ b/Pikkjärv_(Karula).mw
@@ -1,6 +1,6 @@
 {{VõromaaJärv 
 | nimi = Pikkjärv
-| pilt =
+| pilt = [[Pilt:Pikk järv Valgamaa maastikukaitsealal.jpg|300px|]]
 | pildiallkiri = 
 | kihlkund = Karula
 | järve_juusk = [[Piirioja (Karula)|Piiriojast]]
