--- a/Väikene_Saarjärv.mw
+++ b/Väikene_Saarjärv.mw
@@ -1,6 +1,6 @@
 {{VõromaaJärv 
 | nimi = Väikene Saarjärv
-| pilt =
+| pilt = [[Pilt:Värviküllane Võrumaa järve kallas.jpg|300px]]
 | pildiallkiri = 
 | kihlkund = Karula
 | järve_juuskvaq = 
