--- a/Saarjärv_(Karula).mw
+++ b/Saarjärv_(Karula).mw
@@ -1,6 +1,6 @@
 {{VõromaaJärv 
 | nimi = Saarjärv
-| pilt =
+| pilt = [[Pilt:Varajases valguses Antsla vallas.jpg|300px|]]
 | pildiallkiri = 
 | kihlkund = Karula
 | järve_juuskvaq = 
