*Empty MediaWiki Message*

--- a/Pikkjärv_(Karula).mw
+++ b/Pikkjärv_(Karula).mw
@@ -3,7 +3,7 @@
 | pilt = [[Pilt:Pikk järv Valgamaa maastikukaitsealal.jpg|300px|]]
 | pildiallkiri = 
 | kihlkund = Karula
-| järve_juusk = [[Piirioja (Karula)|Piiriojast]]
+| järve_juusk = [[Piirioja (Karula)|Piirioja]]
 | järvest_juusk_vällä = [[Varõssõ oja]]
 | suurus = 34,9 ha
 | pikkus = 3 km
