*Empty MediaWiki Message*

--- a/Mogulidõ_impeerium.mw
+++ b/Mogulidõ_impeerium.mw
@@ -1,5 +1,5 @@
 [[Pilt:Mughal Historical Map.png|250px|thumb|Mogulidõ impeeriumi piiriq]]
 
-'''Mogulidõ impeerium''' oll' [[islam]]istlik riik [[Hindustani puulsaar]]õ pääl, miä tekkü 1526, vallut' 17. aastagasaa lõpos ja 18. aastagasaa alostusõs suurõmba jao Hindustanist nink kattõ ärq 19. aastagasaa keskpaigan.
+'''Mogulidõ impeerium''' ([[Turkkilaiset kielet|Turkki]]: Babür İmparatorluğu) oll' [[Turkkilaiset kansat|Turkin]] [[islam]]istlik riik [[Hindustani puulsaar]]õ pääl, miä tekkü 1526, vallut' 17. aastagasaa lõpos ja 18. aastagasaa alostusõs suurõmba jao Hindustanist nink kattõ ärq 19. aastagasaa keskpaigan.
 
 [[Katõgooria:Aolugu]]
