*Empty MediaWiki Message*

--- a/Mais.mw
+++ b/Mais.mw
@@ -1,5 +1,6 @@
 [[Pilt:Corncobs.jpg|250px|pisi|Mais]]
 [[File:Zea mays fraise MHNT.BOT.2011.18.21.jpg|thumb|''Zea mays "fraise"'']]
+[[File:Dent Corn 'Oaxacan Green' (Zea mays) MHNT 2.jpg|thumb|''Zea mays "Oaxacan Green"'']]
 
 '''Mais''' om [[terävili]]. Tä kasus kooni kuvvõ miitre korgutsõs ja and hektari kotsilõ inämb terri ku ütski tõnõ terävili.
 
