--- a/Luhansk.mw
+++ b/Luhansk.mw
@@ -5,7 +5,7 @@
 |  umakeeline_nimi_2 = vinne keelen | Луганск |
 |  pilt = [[Pilt:LG Cannon 2.jpg|250px|Suurtükk Luhanski kodoluumuusõumi man]] 
 |  pildiallkiri = Suurtükk Luhanski kodoluumuusõumi man
-|  lipu_pilt = [[Pilt:Lugansk1.gif|150px|Luhanski lipp]]
+|  lipu_pilt = [[Pilt:Lugansk1.png|150px|Luhanski lipp]]
 |  lipu_link = [[Luhanski lipp]]
 |  vapi_pilt = [[Pilt:Luhansk COA.svg|100px|Luhanski vapp]]
 |  vapi_link = [[Luhanski vapp]]
