*Empty MediaWiki Message*

--- a/Afriga.mw
+++ b/Afriga.mw
@@ -1,6 +1,6 @@
 [[Pilt:Africa satellite orthographic.jpg|thumb|270px|right|Afriga ilmaruumist kaiõn]]
 
-'''Afriga''' om üts kuvvõst [[ilmajago|ilmajaost]]. Timä ala kuulussõq [[Afriga maisõmaa]] ja saarõq, miä tuu ümbre ommaq. 
+'''Afriga''' vai '''Afrik''' om üts kuvvõst [[ilmajago|ilmajaost]]. Timä ala kuulussõq [[Afriga maisõmaa]] ja saarõq, miä tuu ümbre ommaq. 
 
 Afriga suurus om {{kkm|30244050}}, [[Õuruupa]]st om tä umbõs kolm kõrda suurõmb. 
 
