*Empty MediaWiki Message*

--- a/Ameeriga.mw
+++ b/Ameeriga.mw
@@ -1,6 +1,6 @@
 [[Pilt:LocationAmericas.png|thumb|300px|Ameeriga ilmajago maailmakaardi pääl]]
 
-'''Ameeriga''' om üts kuvvõst [[ilmajago|ilmajaost]]. Tä võtt hindä ala [[Põh'a-Ameeriga]] ja [[Lõuna-Ameeriga]] maisõmaaq ja saarõq, miä ommaq näide ümbre. 
+'''Ameeriga''' vai '''Ameerik''' om üts kuvvõst [[ilmajago|ilmajaost]]. Tä võtt hindä ala [[Põh'a-Ameeriga]] ja [[Lõuna-Ameeriga]] maisõmaaq ja saarõq, miä ommaq näide ümbre. 
 
 {{commons|Americas}}
 {{Põh'a-AmeerigaMaaq}}
