*Empty MediaWiki Message*

--- a/Antarktiga.mw
+++ b/Antarktiga.mw
@@ -1,6 +1,6 @@
 [[Pilt:Antarctica 6400px from Blue Marble.jpg|thumb|300px|right|Antarktiga ilmaruumist kaiõn]]
 
-'''Antarktiga''' om üts kuvvõst [[ilmajago|ilmajaost]]. Tä võtt hindä ala [[Antarktis]]õ maisõmaa ja saarõq, miä tuu ümbre ommaq. 
+'''Antarktiga''' vai '''Antarktik''' om üts kuvvõst [[ilmajago|ilmajaost]]. Tä võtt hindä ala [[Antarktis]]õ maisõmaa ja saarõq, miä tuu ümbre ommaq. 
 
 Antarktiga om kõgõ külmemb ilmajago.
 
