*Empty MediaWiki Message*

--- a/Pirnipuu.mw
+++ b/Pirnipuu.mw
@@ -1,3 +1,4 @@
+[[Pilt:Pyrus communis a1.jpg|300px|thumb|Pirnipuu häiermäq.]]
 [[Pilt:Pears.jpg|300px|thumb|Pirnipuu oss üten pirnega.]]
 
 '''Pirnipuu''' (''Pyrus communis'') om [[viläpuu]], mink vili om [[pirn]]. 
