--- a/Ploomipuu.mw
+++ b/Ploomipuu.mw
@@ -1,5 +1,4 @@
-[[Pilt:Pyrus communis a1.jpg|100px|thumb|Pirnipuu häiermäq.]]
-[[Pilt:Pears.jpg|100px|thumb|Pirnipuu oss üten pirnega.]]
+[[Pilt:Plums hanging.jpg.jpg|100px|thumb|Pluumõ täüs ploomipuu oss.]]
 
 '''Ploomipuu''' (''Prunus domestica'') om [[viläpuu]], mink vili om [[pluum]]. 
 
