*Empty MediaWiki Message*

--- a/Ploomipuu.mw
+++ b/Ploomipuu.mw
@@ -1,4 +1,4 @@
-[[Pilt:Plums hanging.jpg.jpg|100px|thumb|Pluumõ täüs ploomipuu oss.]]
+[[Pilt:Plums hanging.jpg|200px|thumb|Pluumõ täüs ploomipuu oss.]]
 
 '''Ploomipuu''' (''Prunus domestica'') om [[viläpuu]], mink vili om [[pluum]]. 
 
@@ -10,4 +10,4 @@
 [[Katõgooria:Viläpuuq]]
 
 [[et:Ploomipuu]]
-[[en:...]]
+[[en:Prunus domestica]]
