*Empty MediaWiki Message*

--- a/Pluum.mw
+++ b/Pluum.mw
@@ -5,9 +5,24 @@
 == Kaeq viil ==
 *[[Ploomipuu]]
 
+{{multiple image
+| align     = left
+| direction = vertical
+| header    = Different cultivars of plums
+| width     = 140
+| image1    = Slivka.JPG
+| caption1  = Damson plums
+| image4    = Prunus domestica 'Reine Victoria'.jpg
+| caption4  = Victoria plums
+| image2    = Greengages.jpg
+| caption2  = Greengage plums
+| image3    = Mirabellen.jpg
+| caption3  = Mirabelle plums
+}}
+
 {{Commons|Prunus domestica}}
 
 [[Katõgooria:Puuviläq]]
 
 [[et:Ploom]]
-[[en:Prunus domestica]]
+[[en:Plum]]
