*Empty MediaWiki Message*

--- a/Pluum.mw
+++ b/Pluum.mw
@@ -1,24 +1,10 @@
-[[Pilt:Plums hanging.jpg|300px|thumb|Pluumõ täüs ploomipuu oss.]]
+[[Pilt:Page 14 plum - Imperial Gage, Shropshire Damson, Lombard, Maynard, Yellow Egg.jpg|300px|thumb|Mitmõsugutsit pluumõ.]]
 
 '''Pluum''' om [[puuvili]], [[ploomipuu]] vili. 
 
 == Kaeq viil ==
 *[[Ploomipuu]]
 
-{{multiple image
-| align     = left
-| direction = vertical
-| header    = Different cultivars of plums
-| width     = 140
-| image1    = Slivka.JPG
-| caption1  = Damson plums
-| image4    = Prunus domestica 'Reine Victoria'.jpg
-| caption4  = Victoria plums
-| image2    = Greengages.jpg
-| caption2  = Greengage plums
-| image3    = Mirabellen.jpg
-| caption3  = Mirabelle plums
-}}
 
 {{Commons|Prunus domestica}}
 
