*Empty MediaWiki Message*

--- a/Vislamari.mw
+++ b/Vislamari.mw
@@ -1,4 +1,4 @@
-[[Pilt:Koeh-113.jpg|300px|thumb|Vislapuu ossaq, mar'aq, häiermäq.]]
+[[Pilt:Sour cherries.jpg|300px|thumb|Vislamar'aq.]]
 
 '''Vislamari''' vai '''visnamari''' vai '''kirss''' om [[puuvili]], [[vislapuu]] mari. 
 
