*Empty MediaWiki Message*

--- a/Mandela_Nelson.mw
+++ b/Mandela_Nelson.mw
@@ -7,6 +7,6 @@
  | kuulmispaik = 
  | matmispaik = 
  }}
-'''Mandela Nelson''' ('''Nelson Rolihlahla Mandela''', sündünü 1918) oll' [[Lõuna-Afriga Vabariik|Lõuna-Afriga Vabariigi]] edimäne demokraatlidsõlt valit president. Tä pidi tuud ammõtit 1994-1999.
+'''Mandela Nelson''' ('''Nelson Rolihlahla Mandela''', sündünü 1918, † 5 Joulukuu 2013 [[Johannesburg]]) oll' [[Lõuna-Afriga Vabariik|Lõuna-Afriga Vabariigi]] edimäne demokraatlidsõlt valit president. Tä pidi tuud ammõtit 1994-1999.
 
 [[Katõgooria:Lõuna-Afriga Vabariigi presidendiq]]
