*Empty MediaWiki Message*

--- a/Pirn.mw
+++ b/Pirn.mw
@@ -1,4 +1,4 @@
-[[Pilt:Page 14 plum - Imperial Gage, Shropshire Damson, Lombard, Maynard, Yellow Egg.jpg|300px|thumb|Mitmõsugutsit pluumõ.]]
+[[Pilt:Pears - fruits 2.jpg|300px|thumb|Pirniq ossa külen.]]
 
 '''Pirn''' om [[puuvili]], [[pirnipuu]] vili. 
 
