*Empty MediaWiki Message*

--- a/Mandela_Nelson.mw
+++ b/Mandela_Nelson.mw
@@ -1,12 +1,13 @@
 {{Elokäük 
  | nimi = Mandela Nelson
  | pilt = Nelson Mandela.jpg
- | sünnüaig = 
- | sünnüpaik = 
- | kuulmisaig =
- | kuulmispaik = 
+ | sünnüaig = [[18. hainakuu päiv]] [[1918]]
+ | sünnüpaik = [[Mvezo]], [[Lõuna-Afriga Vabariik]]
+ | kuulmisaig = [[5. joulukuu päiv]] [[2013]]
+ | kuulmispaik = [[Johannesburg]], Lõuna-Afriga Vabariik
  | matmispaik = 
+ | ammõt = poliitik
  }}
-'''Mandela Nelson''' ('''Nelson Rolihlahla Mandela''', sündünü 1918, † 5 Joulukuu 2013 [[Johannesburg]]) oll' [[Lõuna-Afriga Vabariik|Lõuna-Afriga Vabariigi]] edimäne demokraatlidsõlt valit president. Tä pidi tuud ammõtit 1994-1999.
+'''Mandela Nelson''' ('''Nelson Rolihlahla Mandela''', 1918-2013 [[Johannesburg]]) oll' [[Lõuna-Afriga Vabariik|Lõuna-Afriga Vabariigi]] edimäne demokraatlidsõlt valit president. Tä pidi tuud ammõtit 1994-1999.
 
-[[Katõgooria:Lõuna-Afriga Vabariigi presidendiq]]
+[[Katõgooria:Lõuna-Afriga Vabariigi poliitiguq]]
