*Empty MediaWiki Message*

--- a/Mandela_Nelson.mw
+++ b/Mandela_Nelson.mw
@@ -8,6 +8,6 @@
  | matmispaik = 
  | ammõt = poliitik
  }}
-'''Mandela Nelson''' ('''Nelson Rolihlahla Mandela''', 1918-2013 [[Johannesburg]]) oll' [[Lõuna-Afriga Vabariik|Lõuna-Afriga Vabariigi]] edimäne demokraatlidsõlt valit president. Tä pidi tuud ammõtit 1994-1999.
+'''Mandela Nelson''' ('''Nelson Rolihlahla Mandela''', 1918-2013) oll' [[Lõuna-Afriga Vabariik|Lõuna-Afriga Vabariigi]] edimäne demokraatlidsõlt valit president. Tä pidi tuud ammõtit 1994-1999.
 
 [[Katõgooria:Lõuna-Afriga Vabariigi poliitiguq]]
