/* Muu ilma inemiseq */

--- a/18._hainakuu_päiv.mw
+++ b/18._hainakuu_päiv.mw
@@ -20,7 +20,7 @@
 * ...
 
 === Muu ilma inemiseq ===
-* [[1918]] - [[Mandela Nelson]], [[Lõuna-Afriga Vabariigi]] poliitik ja inemiseõiguisi iist võitlõja
+* [[1918]] - [[Mandela Nelson]], [[Lõuna-Afriga Vabariik|Lõuna-Afriga Vabariigi]] poliitik ja inemiseõiguisi iist võitlõja
 
 == Koolnuq ==
 === [[Võromaa inemiseq|Võro-]] ja [[Setomaa inemiseq|Setomaa]] inemiseq ===
