/* Muu ilma inemiseq */

--- a/5._joulukuu_päiv.mw
+++ b/5._joulukuu_päiv.mw
@@ -36,6 +36,7 @@
 
 === Muu ilma inemiseq ===
 * [[1791]] - [[Mozarti Wolfgang Amadeus]], [[austria]] viiesepp
+* [[2013]] - [[Mandela Nelson]], [[Lõuna-Afriga Vabariik|Lõuna-Afriga Vabariigi]] poliitik ja inemiseõiguisi iist võitlõja
 
 == Pühäq ja tähtpääväq ==
 * ...
