*Empty MediaWiki Message*

--- a/Mandela_Nelson.mw
+++ b/Mandela_Nelson.mw
@@ -12,6 +12,6 @@
 
 Inne presidendis valimist oll' tä apartheidivastadsõ liikmisõ aktivist. 1962. aastagal panti tä vangi, sinnäq jäi tä 27 aastagas.  Vangin olõmisõ aigu sai täst apartheidivastatsõ võitlusõ sümbol. Peräst vabassaamist 11. radokuu pääväl 1990 propagiirsõ tä ärqlepmispoliitikat, miä tegi lihtsämbäs üleminegi demokraatlidsõlõ riigikõrralõ. Tä valiti presidendis edimäidsil vapol valimiisil Lõuna-Afriga Vabariigin 27. mahlakuu pääväl 1994. Tollõn ammõtin oll' tä 1999. aastagani.
 
-
+{{commons|Nelson Mandela}}
 
 [[Katõgooria:Lõuna-Afriga Vabariigi poliitiguq]]
