*Empty MediaWiki Message*

--- a/Mandela_Nelson.mw
+++ b/Mandela_Nelson.mw
@@ -1,6 +1,6 @@
 {{Elokäük 
  | nimi = Mandela Nelson
- | pilt = Nelson Mandela.jpg
+ | pilt = Nelson Mandela-2008 (edit).jpg
  | sünnüaig = [[18. hainakuu päiv]] [[1918]]
  | sünnüpaik = [[Mvezo]], [[Lõuna-Afriga Vabariik]]
  | kuulmisaig = [[5. joulukuu päiv]] [[2013]]
