--- a/Apartheid.mw
+++ b/Apartheid.mw
@@ -1,6 +1,8 @@
 [[Pilt:DurbanSign1989.jpg|200px|thumb|Silt, miä and inglüse, afrikaani ja suulu keelen teedäq, et taa rand om õnnõ valgõst rassist inemiisile]]
 
-'''Apartheid''' oll' ammõtlinõ [[rass]]õ erälde hoitmisõ [[poliitiga]], midä [[Lõuna-Afriga Vabariik|Lõunõ-Afriga Vabariigin]] aeti 1948–1994. Sõna ''apartheid'' om perit afrikaani keelest ja tähendäs eräldeolõmist. Apartheidipoliitikalõ tegi lõpo [[Mandela Nelson]]i presidendisvaliminõ 1994. aastagal.
+'''Apartheid''' oll' ammõtlinõ [[rass]]õ erälde hoitmisõ [[poliitiga]], midä [[Lõuna-Afriga Vabariik|Lõunõ-Afriga Vabariigin]] aeti 1948–1994. Sõna ''apartheid'' om perit afrikaani keelest ja tähendäs eräldeolõmist. Tuu poliitiga tsihis oll' piirata mustanahaliidsi põliselänige õiguisi ja hoita alalõ valgõ veidembüse ülembvõim. 
+
+Apartheidipoliitikalõ tegi lõpo [[Mandela Nelson]]i presidendisvaliminõ 1994. aastagal.
 
 [[Katõgooria:Aolugu]]
 [[Katõgooria:Lõuna-Afriga Vabariik]]
