--- a/Apartheid.mw
+++ b/Apartheid.mw
@@ -2,7 +2,7 @@
 
 '''Apartheid''' oll' ammõtlinõ [[rass]]õ erälde hoitmisõ [[poliitiga]], midä [[Lõuna-Afriga Vabariik|Lõunõ-Afriga Vabariigin]] aeti 1948–1994. Sõna ''apartheid'' om perit afrikaani keelest ja tähendäs eräldeolõmist. Tuu poliitiga tsihis oll' piirata mustanahaliidsi põliselänige õiguisi ja hoita alalõ valgõ veidembüse ülembvõim. 
 
-Lõunõ-Afrikan naati rassõ erälde hoitma joba sõs, ku tuu oll' Hollandi koloonia. Ammõtlidsõs poliitikas kuulutõdiq apartheid pääle 1948. aastaga üldvalimiisi. Säädüse perrä jaeti inemiseq neljä rassirühmä: mustaq, valgõq, värmilidseq ja indialasõq. Egalõ rühmäle nätti ette umaq elopaigaq ja nii mõnõkiq sunniti tuuperäst elopaika vaihtama. Mustõlõ ja valgilõ tetti erälde kooliq, haigõmajaq, tsukõluskotussõq jne. Sakõstõ saivaq mustaq kehvembit teenüssit ku valgõq.
+Lõunõ-Afrikan naati rassõ erälde hoitma joba sõs, ku tuu oll' [[Holland]]i koloonia. Ammõtlidsõs poliitikas kuulutõdiq apartheid pääle 1948. aastaga üldvalimiisi. Säädüse perrä jaeti inemiseq neljä rassirühmä: mustaq, valgõq, värmilidseq ja indialasõq. Egalõ rühmäle nätti ette umaq elopaigaq ja nii mõnõkiq sunniti tuuperäst elopaika vaihtama. Mustõlõ ja valgilõ tetti erälde kooliq, haigõmajaq, tsukõluskotussõq jne. Sakõstõ saivaq mustaq kehvembit teenüssit ku valgõq.
  
 Apartheidipoliitikalõ tegi lõpo [[Mandela Nelson]]i presidendisvaliminõ 1994. aastagal.
 
