--- a/Paide.mw
+++ b/Paide.mw
@@ -4,6 +4,12 @@
 
 Paiden eläs pall'o [[võrokõsõq|võrokõisi]] ja lõunõeestläisi, kuiki nä kõik mõista-ai joht [[võro kiil]]t, a käüväq kuun.
 
-[[Katõgooria:Eesti liinaq]]
+<gallery>
+Paide raehoone.JPG|Paide raatus
+Paide ordulinnuse varemed 2013.JPG|Paide orduliina varõmidõgaq
+Paide kaubahoovi ärihoone.JPG
+Paide veetorn-elamu.JPG
+Järvamaa Muuseum.JPG|Järvamaa Muusõum
+</gallery>
 
-[[az:Pаidе]]
+[[Katõgooria:Eesti liinaq]]
