The file [[:Image:Emblem_of_Papua_New_Guinea.svg]] has been removed, as it has been deleted by [[:commons:User:Jameslwoodward]]: ''Per [[commons:Commons:Deletion requests/File:Emblem of Papua New Guinea.svg]]''. ''[[m:User:CommonsDelinker|Translate me!...

--- a/Paapua_Vahtsõnõ_Ginea.mw
+++ b/Paapua_Vahtsõnõ_Ginea.mw
@@ -2,7 +2,7 @@
 Nimi=Paapua Vahtsõnõ Ginea|
 Genitiiv=Paapua Vahtsõ Ginea|
 Lipp=Pilt:Flag of Papua New Guinea.svg|
-Vapp=Pilt:Emblem_of_Papua_New_Guinea.svg|
+Vapp=|
 Kaart=Pilt:LocationPapuaNewGuinea.svg|
 Riigikiil=[[inglüse kiil]], [[tok-pisini kiil]], [[hirimotu kiil]]|
 Pääliin=[[Port Moresby]]|
