Unification:Blason ville fr Saint-Die-des-Vosges (88).svg

--- a/Saint-Dié-des-Vosges.mw
+++ b/Saint-Dié-des-Vosges.mw
@@ -1,4 +1,4 @@
-[[Pilt:Blason Saint-Dié-des-Vosges.png|left|70 px]]
+[[Pilt:Blason ville fr Saint-Die-des-Vosges (88).svg|left|70 px]]
 [[Pilt:Saint-Dié-des-Vosges-Cathédrale.jpg|250 px|right|thumb|Katedraal]]
 '''Saint-Dié-des-Vosges''' om [[Prantsusmaa]] liin, kon elli 1999. aastagal 25 569 inemist.
 
