--- a/Mandela_Nelson.mw
+++ b/Mandela_Nelson.mw
@@ -10,7 +10,7 @@
  }}
 '''Mandela Nelson''' ('''Nelson Rolihlahla Mandela''', 1918-2013) oll' [[Lõuna-Afriga Vabariik|Lõuna-Afriga Vabariigi]] edimäne demokraatlidsõlt valit president. Tä pidi tuud ammõtit 1994-1999.
 
-Inne presidendis valimist oll' tä apartheidivastadsõ liikmisõ aktivist. 1962. aastagal panti tä vangi, sinnäq jäi tä 27 aastagas.  Vangin olõmisõ aigu sai täst [[apartheid]]ivastatsõ võitlusõ sümbol. Peräst vabassaamist 11. radokuu pääväl 1990 propagiirsõ tä ärqlepmispoliitikat, miä tegi lihtsämbäs üleminegi demokraatlidsõlõ riigikõrralõ. Tä valiti presidendis edimäidsil vapol valimiisil Lõuna-Afriga Vabariigin 27. mahlakuu pääväl 1994. Tollõn ammõtin oll' tä 1999. aastagani.
+Inne presidendis valimist oll' tä [[apartheid]]ivastadsõ liikmisõ aktivist. 1962. aastagal panti tä vangi, sinnäq jäi tä 27 aastagas.  Vangin olõmisõ aigu sai täst apartheidivastatsõ võitlusõ sümbol. Peräst vabassaamist 11. radokuu pääväl 1990 propagiirsõ tä ärqlepmispoliitikat, miä tegi lihtsämbäs üleminegi demokraatlidsõlõ riigikõrralõ. Tä valiti presidendis edimäidsil vapol valimiisil Lõuna-Afriga Vabariigin 27. mahlakuu pääväl 1994. Tollõn ammõtin oll' tä 1999. aastagani.
 
 {{commons|Nelson Mandela}}
 
