*Empty MediaWiki Message*

--- a/Mandela_Nelson.mw
+++ b/Mandela_Nelson.mw
@@ -14,4 +14,6 @@ Inne presidendis valimist oll' tä [[apartheid]]ivastadsõ liikmisõ aktivist. 1
 
 {{commons|Nelson Mandela}}
 
+
+[[Katõgooria:Lõuna-Afriga Vabariigi inemiseq]]
 [[Katõgooria:Lõuna-Afriga Vabariigi poliitiguq]]
