*Empty MediaWiki Message*

--- a/Tolohkna.mw
+++ b/Tolohkna.mw
@@ -1,3 +1,4 @@
+[[Pilt:Talkkuna2.jpg|pisi|paremal|Tolohkna]]
 '''Tolohkna''' vai '''kama''' om keededüq, kuivaduq ja jauhaduq segämädsest villäst jark jauh, midä hariligult süvväs (juvvas) hapnõ vai rõõsa piimägaq ni keefiri vai jogurdigaq.
 
 [[katõgooria:söögiq]]
