--- a/Anastacia.mw
+++ b/Anastacia.mw
@@ -7,7 +7,7 @@
 * [[2005]] - ''[[Pieces of a Dream (album Anastacia)|Pieces of a Dream]]'' 
 * [[2008]] - ''[[Heavy Rotation]]'
 
-
+== Singliq == 
 
 * 1993: One More Chance
 * 1993: Forever Luv (duet with David Morales)
