/* Muu ilma inemiseq */

--- a/17._süküskuu_päiv.mw
+++ b/17._süküskuu_päiv.mw
@@ -20,7 +20,7 @@
 * ...
 
 === Muu ilma inemiseq ===
-* ...
+* [[1968]] - [[Anastacia]], ameeriga laulja ja laulukirotaja
 
 == Koolnuq ==
 === [[Võromaa inemiseq|Võro-]] ja [[Setomaa inemiseq|Setomaa]] inemiseq ===
