*Empty MediaWiki Message*

--- a/Pipõrkuuk.mw
+++ b/Pipõrkuuk.mw
@@ -1,9 +1,6 @@
 [[Pilt:Freshly baked gingerbread - Christmas 2004.jpg|pisi|Pipõrkuukõ süvväs hariligult [[jouluq|joulu]] aol]]
 
-'''Pipõrkuuk''' om [[kuuk]] vai [[präänik]], miä om tett [[tsiirop|tsiirobiga]] makõs tettüst ja kõvva vürdsitedüst [[tainas]]t<ref>http://files.ene.test.finestmedia.ee/ENE%206.%20k%C3%B6ide.%20Pais%E2%80%93Rumo%20%281974%29/NENE6_page_0135.jpg (vaadatud 17.10.2013)</ref>. Pipõrkoogiq ommaq harilik joulõ aol süüdäv makjus Eestin, Roodsin, Norran, Soomõn ja Lätin.
-
-==Viited==
-{{viited}}
+'''Pipõrkuuk''' om [[kuuk]] vai [[präänik]], miä om tett [[tsiirop|tsiirobiga]] makõs tettüst ja kõvva vürdsitedüst [[tainas]]t. Pipõrkoogiq ommaq harilik joulõ aol süüdäv makjus Eestin, Roodsin, Norran, Soomõn ja Lätin.
 
 [[Katõgooria:Süük]]
 
