*Empty MediaWiki Message*

--- a/Pipõrkuuk.mw
+++ b/Pipõrkuuk.mw
@@ -2,6 +2,6 @@
 
 '''Pipõrkuuk''' om [[kuuk]] vai [[präänik]], miä om tett [[tsiirop|tsiirobiga]] makõs tettüst ja kõvva vürdsitedüst [[tainas]]t. Pipõrkoogiq ommaq harilik joulõ aol süüdäv makjus Eestin, Roodsin, Norran, Soomõn ja Lätin.
 
-[[Katõgooria:Süük]]
+[[Katõgooria:Söögiq]]
 
 [[en:Gingerbread]]
