*Empty MediaWiki Message*

--- a/Pipõrkuuk.mw
+++ b/Pipõrkuuk.mw
@@ -4,6 +4,8 @@
 
 Pipõrkoogiq omaq hariligult pruuniq. Sagõhõhe ilostõdas pipõrkuukõ päält valgõ vai ka värmilidse glasuuriga.
 
+[[Pilt:Pipõrkoogiq.jpg|pisi|Latsi hindätettüq pipõrkoogiq]]
+
 [[Katõgooria:Söögiq]]
 
 [[en:Gingerbread]]
