*Empty MediaWiki Message*

--- a/Pipõrkuuk.mw
+++ b/Pipõrkuuk.mw
@@ -4,7 +4,7 @@
 
 Pipõrkoogiq omaq hariligult pruuniq. Sagõhõhe ilostõdas pipõrkuukõ päält valgõ vai ka värmilidse glasuuriga.
 
-[[Pilt:Pipõrkoogiq.jpg|pisi|Latsi hindätettüq pipõrkoogiq]]
+[[Pilt:Pipõrkoogiq.jpg|pisi|left|Latsi hindätettüq pipõrkoogiq]]
 
 [[Katõgooria:Söögiq]]
 
