--- a/Pipõrkuuk.mw
+++ b/Pipõrkuuk.mw
@@ -5,6 +5,7 @@
 Pipõrkoogiq omaq hariligult pruuniq. Sagõhõhe ilostõdas pipõrkuukõ päält valgõ vai ka värmilidse glasuuriga.
 
 [[Pilt:Pipõrkoogiq.jpg|pisi|left|Latsi hindätettüq pipõrkoogiq]]
+[[Pilt:Pipõrkuuk.jpg|pisi|left|Latsõ hindätett ja kõvva glasuuriga ilostõt pipõrkuuk]]
 
 [[Katõgooria:Söögiq]]
 
