--- a/Võro-Seto_tähtraamat.mw
+++ b/Võro-Seto_tähtraamat.mw
@@ -34,6 +34,7 @@ Võro-Seto tähtraamatut ommaq vällä andnuq [[Võro Keele ja Kultuuri Fond]], 
 || [[Võro-Seto tähtraamat vai kallendri 2011. aastaga pääle|2011]] 
 || [[Võro-Seto tähtraamat vai kallendri 2012. aastaga pääle|2012]]
 || [[Võro-Seto tähtraamat vai kallendri 2013. aastaga pääle|2013]]
+|| [[Võro-Seto tähtraamat vai kallendri 2014. aastaga pääle|2014]]
 |}
 
 
