*Empty MediaWiki Message*

--- a/Võro-Seto_tähtraamat_vai_kallendri_2014._aastaga_pääle.mw
+++ b/Võro-Seto_tähtraamat_vai_kallendri_2014._aastaga_pääle.mw
@@ -48,6 +48,7 @@
 |-
 || Vahtsõt umakeelist ja -meelist simunapääväst simunapääväni (28.10.2011-28.10.2012) || 77
 |}
+--> 
 
 ==Teedüs==
 
@@ -55,21 +56,22 @@
 |-
 || Välläandja: || [[Võro Selts VKKF]]
 |-
-|| Ilmumisaastak: || 2012
+|| Ilmumisaastak: || 2013
 |-
 || Lehekülgi arv: || 80
 |-
 || Toimõndaja: || [[Reimanni Nele]] 
 |-
-|| Kaas, pildiq ja sainakallendri: || [[Margna Epp]]
+|| Kaas, pildiq ja sainakallendri: || [[Kuusingu Toomas]]
 |-
 || Tähetiidüslik teedüs: || [[Kasagu Enn]]
+|-
+|| Tehnilinõ toimõndaminõ: || Lööperi Priit
 |-
 || Trükk: || Bookmill
 |-
 || ISSN: || 1406-5150
 |}
--->
 
 [[Katõgooria:Võrokeelidseq raamaduq]]
 [[Katõgooria:2013 raamaduq]]
