*Empty MediaWiki Message*

--- a/Võro-Seto_tähtraamat_vai_kallendri_2014._aastaga_pääle.mw
+++ b/Võro-Seto_tähtraamat_vai_kallendri_2014._aastaga_pääle.mw
@@ -4,51 +4,59 @@
 ==Sisokõrd==
 {|
 |-
-|| Kallendriseletüisi || 4 
+|| Kallendriseletüisi || 3 
 |-
-|| Tähetiidüslik teedüs 2013 || 5 
+|| Tähetiidüslik teedüs || 4 
 |-
-|| Kallendri || 6  
+|| Kallendri || 5  
 |-
-|| Kiä om kiä 2013? || 18  
+|| Kiä om kiä 2014? || 17  
 |-
-|| TALV
+|| MÕTS
 |-
-|| Rõugõ muistidsõ ao tarõ lugu. ''Pajuste Viire'' || 22 
+|| [[Kauksi Ülle]] maausu palvõsõna || 21 
 |-
-|| Seto käsitüümeistre [[Lillmaa Terje]] ilmadu illos pitsimaailm. ''Lillmaa Terjega kõnõl' [[Reimanni Nele]].'' || 29
+|| Mõtsapuu - kaitsja ja katja, vele ja sõsarõ. ''[[Kõivupuu Marju]]'' || 22
 |-
-|| KEVVÄI || 
+|| Mõtsatsirgu' uman keelen. ''[[Kalla Urmas]]'' || 27 
 |-
-|| [[Kauksi Ülle]] keväjälaulõ.  || 35
+|| Vahtsõnõ luud pühk häste. ''Laanekivi Õie''  || 32
 |-
-|| Kõomahla korjamine ja joogis tarvitamine Vanal [[Võromaa]]l. ''[[Eichenbaumi Külli]]'' || 36
+|| Midä om [[Setomaa]]l aost aigu mõtsast saadu. ''Paali Taimi'' || 34
 |-
-|| Setokõisi vannamuudu värehti. ''[[Raudoja Ahto]]''  || 40
+|| Sebivitsuga regi. Lühükene tegemise oppus Harglõst. ''[[Reimanni Nele]]''  || 39
 |-
-|| Vahtsõnõ uutmiskoda ku väreht mi ao [[Setomaa]]lõ. ''[[Valgu Meel]]'' || 43
+|| VESI  || 
 |-
-|| SUVI  || 
+|| Kauksi Ülle maausu palvõsõna || 41
 |-
-|| Jaanilaul (kirja pantu Tsiberi setodõ man) || 47
+|| Lättide seen omgi läte. ''Vilbaste Kristel'' || 42
 |-
-|| Edimäst kõrda Tsiberi setokõisi man. Juppõ pääväraamadust. ''[[Kalkuni Andreas]]'' || 48
+|| Vahtsõba ao kalasöögi' Setomaalt [[Poloda nulgast|Poloda nulk]]. ''Laari Maivi''  || 54
 |-
-|| Ku Lämmäleevä Maali viil Põlva aolehte kirot'...  || 54
+|| Su sillesinidse' hummogu'. Luulõtuisi || 47 
 |-
-|| SÜKÜS || 
+|| Katõ vana veski elolugu. ''Reimanni Nele'' || 49
 |-
-|| Üts kõrralik süümaig. ''Guerrini Triinu ja Karu Kadri'' || 59
+|| MAA || 
 |-
-|| Sügüsene luulõnukakõnõ. ''Luulõtuisi Trummi Riinalt, [[Jüvä Sullõv|Jüvä Sulõvilt]], Antoni Annikalt ja Schultzi Unolt'' || 62 
+|| Kauksi Ülle maausu palvõsõna || 57
 |-
-|| Esivanõmbidõ mälehtämise kombõ Setomaal inne ja parhilla. ''Kambrimäe Evi'' || 66
+|| Vanno [[Võromaa]] süüke tuust, miä maa pääl vai puu otsan kasus. ''Karu Kadri ja Guerrini Triinu'' || 58 
+|-
+|| Setokõisi linamäng || 63 
+|-
+|| Võromaa lina om väärt peris umma muusõummi. ''Remmeli Kristina'' || 67 
+|- 
+|| Kuimuudi vanastõ sõõrdu tetti? ''Jäätsi Liisi, Tomsoni Pille, Kihno Kersti, Konsa Marge'' || 71
 |-
 ||   || 
 |-
-|| Vahtsõt umakeelist ja -meelist simunapääväst simunapääväni (28.10.2011-28.10.2012) || 77
+|| Vahtsõt umakeelist ja -meelist simunapääväst simunapääväni (28.10.2012-28.10.2013) || 76 
+|-
+|| Siso || 80
 |}
---> 
+-->
 
 ==Teedüs==
 
