Pruukja [[Special:Contributions/188.232.1.229|188.232.1.229]] ([[User_talk:188.232.1.229|arotus]]) toimõndusõq pöörediq tagasi ja leht panti tagasi pruukja [[User:Addbot|Addbot]] tettü kujo pääle.

--- a/Wikipedia:Miä_sünnüs.mw
+++ b/Wikipedia:Miä_sünnüs.mw
@@ -3,6 +3,120 @@
 Hääq inemiseq! Võrokeeline Vikipeediä luudi 2005. aastaga jaanipäävä paiko. Kirotagõq ja toimõndagõq vabalt taad maailma edimäst võrokeelist entsüklopeediät! Nii ti avitat taal kassuq tõõlidsõs tiidmiisi varasalvõs ja nii saavaq võrokõsõq edimäst kõrda aoluun peris umakeelidse entsüklopeediä. -[[User:Võrok|Võrok]] 18:31, 25 Jun 2005 (UTC)
 
 
+== 300 artiklit täüs! ==
+18. mahlakuu pääväs 2006 sai võro vikipeediäh täüs 300 artiklit. Pääsüüdläne jälki [[User:Valdis|Valdis]], kiä kirotanuq hulga vahtsit artikliid Võromaa kotussidõ, inemiisi ja luudusõ kotsilõ.--[[User:Võrok|Võrok]] 16:31, 19 April 2006 (UTC)
+
+== 400 artiklit täüs! ==
+24. põimukuu päävä 2006 saisoga um võro vikipeediäh jo paarkümmend artiklit päält 400, tuud teno [[User:Valdis|Valdissõlõ]], kiä um tennüq vahtsit kirotuisi põhilidsõlt inemiisi ja umavalitsuisi kotsilõ. --[[User:Võrok|Võrok]] 17:23, 24 põimukuu 2006 (UTC)
+
+== 500 artiklit täüs!! ==
+Ja noq, 2006. aastaga rehekuu alostusõh, um võro vikih saanuq täüs edimäne puultuhat artiklit. Täüs sai taa suur tsõõrikanõ nummõr tuuga, et Valdis kirot üte hüä pośo artiklit võrokeelitsist muusigategijist ja näide helüplaadõst-kasetest. --[[User:Võrok|Võrok]] 13:57, 10 rehekuu 2006 (UTC) 
+
+== Edimäne tuhat artiklit!! ==
+
+2007. aastaga edimäidsil päivil sai võro vikipeediäh täüs edimäne tuhat artiklit. Kõgõ inämb um perämädsel aol mano tulnuq aastagidõ, kuupäivi ja aastagasato artikliid, a ka hulga matõmaatiga artikliid ja viil ütte-tõist muiõ eloallo päält. --[[User:Võrok|Võrok]] 10:20, 5 vahtsõaastakuu 2007 (UTC)
+
+== Viki pruukjapalõq om no tävveste võro keelen ==
+
+Viki pruukjapalõq - tuu, kuis ja mis keelen vikipeediän ja muin vikidõn egäsugudsõq teedüseq ja kiräq pruukjalõ nätäq ommaq - om no tävveligult võro kiilde pant. Tuu tähendäs, et võro vikipeediän ommaq egäsugudsõq abi-, oppus-, hoiatus- jm sõnomiq ni pääl-, all- ja veerekiräq automaatsõhe võro keelen, a ka muiõ kiili vikidõn saa no egä tahtja uma pruukjapalgõ võrokeelitses pandaq. Tuujaos tulõ vikihte uma nimega sisse minnäq ja sis päälehe üleväst veerest valliq: "muq säädmiseq" (inglüse vikipeediän "my preferences", eesti vikipeediän "minu eelistused", soomõ vikipeediän "asetukset" jne) ja säält valliq nimekiräst hindäle keeles "fiu-vro - Võro". Ku kelgi om ettepanõkit vai arvamiisi, kuis võrokeelist pruukjapalõt parõmbas tetäq (ku näet mõnt vika vai arvat, et mõni sõna võisiq tõisildõ ollaq), sis pallõsi tuust mu arotuslehe pääl teedäq andaq --[[Pruukja:Võrok|Võrok]] 24. mahlakuu 2007, kell 08:31 (UTC)
+
+== 1500 ja 1700 artiklit ==
+
+2008. aastaga urbõkuu alostusõh sai võro vikipeediäh täüs 1500 ja pia jo ka 1700 artiklit. Seo kuu kipõ artiklidõ manotulõminõ um saanuq põhilidsõlt maailma maiõ internetitunnussidõ artiklidõ kirotamisõst. Noq um peräkõrd jout ka niikavvõhe, et vähämbält päälehe pääl olõ-i inämb üttegi verevät linki (kirotamaldaq artiklit). --[[Pruukja:Võrok|Võrok]] 5. urbõkuu 2008, kell 22:20 (UTC)
+
+== Võro vikipeediäst "Sakala" lehen ==
+[http://www.sakala.ajaleht.ee/120808/esileht/5035744.php Kaeq siist.] --[[Pruukja:Võrok|Võrok]] 25. põimukuu 2008, kell 13:18 (UTC)
+
+== Kats tuhat artiklit ==
+
+Kats tuhat artiklit sai võro vikipeediäh täüs 2008. aastaga lõpuh, joulukuu 30. pääväl, ku [[pruukja:Valdis|Valdis]] kirot' mano hulga artiklit Võromaa mäenimmi kotsilõ. --[[Pruukja:Võrok|Võrok]] 2. vahtsõaastakuu 2009, kell 00:21 (UTC)
+
+== 2500 artiklit ==
+2500 artiklit sai võro vikipeediäh täüs 2009. aastaga urbõkuu tõõsõh poolõh, ku [[pruukja:Valdis|Valdis]] kirot' mano hulga artiklit [[Võromaa järveq|Võromaa järvist]] ja mõnõq vahtsõq pruukjaq kirodiq mano mitu vahtsõt artiklit väega esiqsugutsist aśost ([[Muhumaa]]st, [[Dostojevski]], [[Kreutzwald]]i ja [[Viinalill]]ini).--[[Pruukja:Võrok|Võrok]] 24. urbõkuu 2009, kell 14:29 (UTC)
+
+== Kolm tuhat artiklit ==
+Urbõkuu perämäidsil päivil, ku Valdis kirot' hulga artiklit Võromaa jõki kotsilõ, sai võro vikipeediäh kokko päält 3000 artikli. --[[Pruukja:Võrok|Võrok]] 29. urbõkuu 2009, kell 15:43 (UTC)
+
+== Neli tuhat artiklit ==
+Neläs tuhat artiklit sai täüs ütesä kuud päält kolmõ tuhandõ täüssaamist. Tuu sündü inne 2009. aastaga joulu, ku Valdis kirot' terve hulga põhilidsõlt luudustiidüisi pututavit artiklit.--[[Pruukja:Võrok|Võrok]] 19. joulukuu 2009, kell 23:58 (UTC)
+
+== Infoteknoloogia artiklidõ kirotamisõ võistlus ==
+
+1.-31. urbõkuu pääväni 2010 um eesti ja võro vikipeediän vällä kuulutõt infoteknoloogia artiklidõ kirotamisõ võistlus. Ligembält loeq võistlusõ kotsilõ eestikeelidse vikipeediä artiklist [http://et.wikipedia.org/wiki/Vikipeedia:Informaatika-alaste_artiklite_kirjutamise_v%C3%B5istlus Informaatika-alaste artiklite kirjutamise võistlus].--[[Pruukja:Võrok|Võrok]] 3. urbõkuu 2010, kell 20:58 (UTC)
+
+== 5000 artiklit täüs!! ==
+[[9. rehekuu päiv|Rehekuu 9. pääväl]] 2012 sai võro Vikipeediän täüs 5000 artiklit, päält tuud, ku Valdis kirot' mano üte suurõmba pordsu Võromaa külli artikliid.--[[Pruukja:Võrok|Võrok]] ([[Pruukja arotus:Võrok|arutelu]]) 8. rehekuu 2012, kell 21:42 (UTC)
+
+[[Katõgooria:Vikipeediä]]
+
+[[af:Nuus]]
+[[ar:أخبار]]
+[[arc:ܛܐܒܐ]]
+[[id:Berita]]
+[[ms:Berita]]
+[[bn:সংবাদ]]
+[[zh-min-nan:Sin-bûn]]
+[[jv:Pawarta]]
+[[be:Навіны]]
+[[be-x-old:Навіны]]
+[[bg:Новини]]
+[[ca:Notícia]]
+[[ceb:Balita]]
+[[cv:Хыпарсем]]
+[[cs:Zpravodajství]]
+[[cy:Newyddion]]
+[[de:Nachrichten]]
+[[na:Imwin]]
+[[en:News]]
+[[es:Noticia]]
+[[eo:Novaĵo]]
+[[eu:Albiste]]
+[[fa:خبر]]
+[[fo:Núverandi hendingar]]
+[[fr:Actualité]]
+[[fy:Nijs]]
+[[ko:뉴스]]
+[[hi:समाचार]]
+[[ilo:Damdamag]]
+[[is:Frétt]]
+[[it:Notizia]]
+[[he:אקטואליה]]
+[[ka:ახალი ამბები]]
+[[sw:Habari]]
+[[lo:Current events]]
+[[la:Nuntius]]
+[[lv:Ziņas]]
+[[lb:Aktualitéit]]
+[[lt:Naujienos]]
+[[li:In 't nuujs]]
+[[hu:Hír]]
+[[mg:Current events]]
+[[mr:बातमी]]
+[[mn:Мэдээ]]
+[[nl:Nieuws]]
+[[ja:ニュース]]
+[[no:Nyhet]]
+[[nn:Nyhende]]
+[[oc:Actualitat]]
+[[or:ସମ୍ବାଦ]]
+[[om:News]]
+[[pl:Wiadomość]]
+[[pt:Jornalismo#Notícia]]
+[[ro:Știre]]
+[[ru:Новости]]
+[[scn:Nutizzi]]
+[[simple:News]]
+[[ckb:ھەواڵەکان]]
+[[sr:Вест]]
+[[fi:Uutinen]]
+[[sv:Nyhet]]
+[[tl:Balita]]
+[[ta:செய்தி]]
+[[te:వార్త (న్యూస్)]]
+[[th:ข่าว]]
+[[vi:Tin tức]]
+[[tg:Ахбор]]
+[[tr:Haber]]
 [[uk:Новини]]
 [[ur:خبریں]]
 [[vo:Jenots nuik]]
