*Empty MediaWiki Message*

--- a/Pipõrkuuk.mw
+++ b/Pipõrkuuk.mw
@@ -9,4 +9,5 @@ Pipõrkoogiq omaq hariligult pruuniq. Sagõhõhe ilostõdas pipõrkuukõ päält
 
 [[Katõgooria:Söögiq]]
 
+[[et:Piparkook]]
 [[en:Gingerbread]]
