--- a/Kaika_suvõülikuul.mw
+++ b/Kaika_suvõülikuul.mw
@@ -41,6 +41,7 @@ Suvõülikoolõst ommaq vällä kasunu [[Võro Instituut|Võro Instituudi]] luum
 #[[Kaika suvõülikuul 2010 Haanin|2010 Haani (Rõugõ khk, 134 osavõtjat)]]
 #[[Kaika suvõülikuul 2011 Kanepin|2011 Kanepi (Kanepi khk, 160 osavõtjat)]]
 #[[Kaika suvõülikuul 2012 Harglõn|2012 Harglõ (Harglõ khk, 452 osavõtjat)]]
+#[[Kaika suvõülikuul 2013 Moosten|2013 Mooste (Põlva khk)]]
 
 Osavõtjidõ arvoq ommaq tan kirjäpandmislehti perrä. Tuu viil ei tähendäq, et kirjäpandnuq ommaq kolm päivä suvõülikoolin olnuq. Saman või ollaq suvõülikoolin käüjit, kiä olõ-iq hinnäst kirjä pandnuq.
 
