*Empty MediaWiki Message*

--- a/Võro-Seto_tähtraamat_vai_kallendri_2014._aastaga_pääle.mw
+++ b/Võro-Seto_tähtraamat_vai_kallendri_2014._aastaga_pääle.mw
@@ -1,6 +1,5 @@
 '''"Võro-Seto tähtraamat vai kallendri 2014. aastaga pääle"''' om [[Võro-Seto tähtraamat|"Võro-Seto tähtraamadu"]] katõkümne viies aastagakäük. Tähtraamaduga om üten sainakallendri.
 
-<!--
 ==Sisokõrd==
 {|
 |-
@@ -34,7 +33,7 @@
 |-
 || Vahtsõba ao kalasöögi' Setomaalt [[Poloda nulgast|Poloda nulk]]. ''Laari Maivi''  || 54
 |-
-|| Su sillesinidse' hummogu'. Luulõtuisi || 47 
+|| Su sillesinidse' hummogu'. ''[[Panga Milvi]] luulõtuisi'' || 47 
 |-
 || Katõ vana veski elolugu. ''Reimanni Nele'' || 49
 |-
@@ -56,7 +55,7 @@
 |-
 || Siso || 80
 |}
--->
+
 
 ==Teedüs==
 
