*Empty MediaWiki Message*

--- a/Võro-Seto_tähtraamat_vai_kallendri_2014._aastaga_pääle.mw
+++ b/Võro-Seto_tähtraamat_vai_kallendri_2014._aastaga_pääle.mw
@@ -31,7 +31,7 @@
 |-
 || Lättide seen omgi läte. ''Vilbaste Kristel'' || 42
 |-
-|| Vahtsõba ao kalasöögi' Setomaalt [[Poloda nulgast|Poloda nulk]]. ''Laari Maivi''  || 54
+|| Vahtsõba ao kalasöögi' Setomaalt [[Poloda nulk|Poloda nulgast]]. ''Laari Maivi''  || 54
 |-
 || Su sillesinidse' hummogu'. ''[[Panga Milvi]] luulõtuisi'' || 47 
 |-
