*Empty MediaWiki Message*

--- a/Võro-Seto_tähtraamat_vai_kallendri_2014._aastaga_pääle.mw
+++ b/Võro-Seto_tähtraamat_vai_kallendri_2014._aastaga_pääle.mw
@@ -1,4 +1,4 @@
-'''"Võro-Seto tähtraamat vai kallendri 2014. aastaga pääle"''' om [[Võro-Seto tähtraamat|"Võro-Seto tähtraamadu"]] katõkümne viies aastagakäük. Tähtraamaduga om üten sainakallendri.
+'''"Võro-Seto tähtraamat vai kallendri 2014. aastaga pääle"''' om [[Võro-Seto tähtraamat|"Võro-Seto tähtraamadu"]] katõkümne viies aastagakäük. Tähtraamaduga om üten sainakallendri. Toimõnd' [[Reimanni Nele]].
 
 ==Sisokõrd==
 {|
