*Empty MediaWiki Message*

--- a/Kaika_suvõülikuul_2013_Moosten.mw
+++ b/Kaika_suvõülikuul_2013_Moosten.mw
@@ -2,43 +2,34 @@
 
 <!--
 ==Kava==
-===Riidi, 10. põimukuu päiv===
-[[Pilt:20120810_kaias_Taheva_valla_kaarti.JPG|200px|thumb|Suvõülikoolist osavõtjaq kaessõq Harglõ vana kõrdsihuunõ man Taheva valla kaarti.]]
-12.00 Tulõjidõ kirjapandminõ 
+===Riidi, 9. põimukuu päiv===
+12.00 Kokkosaaminõ, kirjapandminõ Mooste koolimaja man
 
-12.30 Lõunõsüük
+13.00 Lõunasüük
 
-13.00 Suvõülikooli vallalõtegemine koolimaja man.
-:Tervütiq Harglõ maakultuurimaja laulutsõõri lauljaq.
-:Tal'na Võro Seldsi naisi lauluansambli Liiso tervütüs.
-:Mõtlõmistiatri tutvustus.
-:Käüdi kalmuaian Harglõ kihlkunna kivi man.
-:Kultuurimaja man inne loengit tutvustõdiq vahtsõt teedüstahvlit paikkundligu kaardi ja teedüsega.
+14.30 Suvõülikooli vallategemine koolimaja man
 
-14.30–18.00 Loenguq kultuurimajan: Harglõ kihlkund vanast ja parhilla.
+14.45-16.15 Tuur mõisa pääl. Rahvamuusikamaja, viinakoda ja meistride kuaq.
 
-14.30 Kiho Toomas. Harglõ tekütämine: Harglõ rikkusõq ja näide kestmine.
+14.30–18.00 Loenguq koolimajan
 
-15.00 Fastrõ Mariko ja Saarõ Evar. Harglõ kihlkunna keelest ja kotussõnimmist.
+16.30 Kiristäjä Arvis. Mooste valla muinasmälehtüseq
 
-15.30 Pae Taavi. Mõnistõ kihlkunna edenimmist ehk kuna elliq Mehka ja Hipp? 
+17.00 Punninge Vello. [[Rasina mõisa]]
 
-16.00 Kohvi- ja tsäivaih kultuurimajan.
+17.30 Sildoja Krista. [[Pulsti August]], rahvaviite korjaminõ Mooste vallan edimädsel Esti aol 
 
-16.30 Orasõ Janika. Harglõ kihlkunna rahvalauliguq.
+18.00 Pintsaarõ Asta. [[Vahtra Jaan]] ja Kauksi Perävalla lugu
 
-17.00 Raudoja Ahto. Kuis vannu huunit mõistligult üles praavita?
+18.30 Lepiski Arvi. [[Miilva suu]] ja timä tsirguq 
 
-17.30 Kõivupuu Marju ja Ranniku Silva. Harglõ kihlkunna rahvarõivaq ja naidõ kandminõ.
-
-18.00 Õdagusüük koolimajan.
-
-19.00 Kirändüs- ja näütemänguõdak kultuurimajan.
-:- Kohaligu rahva näütemäng „Kedä võtta, kedä jättä“.
-:- Mõtlõmistiatri edimädse päävä tüü tutvustus.
-:- Tal'na Võro Seldsi näütemäng ”Mattklaasist kirst”
-:- Kirändüsõdak Hargla Indrekuga.
-:Kinkal viil joudu ja tahtmist oll', sai perän kultuurimaja tulõkotussõ man istu.
+19.00 Tegemiseq Veskitiatri man
+:- Raudoja Ahto näütäs [[Seto instituut|Seto instituudi]] välläandit
+:- õdagusüük välän (lambaliharuug väläkatlast)
+:- muistitside kivipilte näütüs
+:- Tal'na Võro Seldsi lauluansambli Liiso tervütüs
+:- tõrvaajaminõ 
+:- ...
 
 Riididse päävä latsiprogramm koolimaja man 14.30 – 18.00.
 
