*Empty MediaWiki Message*

--- a/Kaika_suvõülikuul_2013_Moosten.mw
+++ b/Kaika_suvõülikuul_2013_Moosten.mw
@@ -29,18 +29,21 @@
 :- muistitside kivipilte näütüs
 :- Tal'na Võro Seldsi lauluansambli Liiso tervütüs
 :- tõrvaajaminõ 
-:- ...
+:- uma kandi pillimeheq tõmbasõq lõõtsa (Ojasaarõ Toomas jt.)
+:- Tal'na võrokõisi näütemängopark Tungõl oppas tahtjilõ vahtsõt tükkü
+:- suidsusannaga tutvassaaminõ, vihategemine, sannankäümine
 
-Riididse päävä latsiprogramm koolimaja man 14.30 – 18.00.
+Latsikoolitus loengidõ aigo.
 
-===Puulpäiv, 11. põimukuu päiv===
-[[Pilt:20120811 Raudvasara Valdur.JPG|150px|thumb|Raudvasara Valdur kõnõlõs Käärmanni Alfredist.]]
+===Puulpäiv, 10. põimukuu päiv===
 
 8.00 Hummogusüük koolimajan.
 
-9.00 – 12.00 Loenguq kultuurimajan: Võromaa kirändüsest. Harglõ kandi ao- ja kodoluust.
+9.00 – 12.30 Loenguq koolimajan. 
 
-9.00 Teemägi Ene ja Ranniku Silva. Harglõ kooli aoluust.
+Kellä 9-11 Esti veidembüs- ja paikkundliidsi kiili ütisüse tellitüq ettekandõq: 
+
+9.00 Allasõ Tiia. ...
 
 9.30 Kõivupuu Marju. Harglõ kandi rahvaluulõst, uskmiisist, luudusliisist pühäkotussist ja ristipuiõst.
 
