*Empty MediaWiki Message*

--- a/Kaika_suvõülikuul_2013_Moosten.mw
+++ b/Kaika_suvõülikuul_2013_Moosten.mw
@@ -43,17 +43,19 @@ Latsikoolitus loengidõ aigo.
 
 Kellä 9-11 Esti veidembüs- ja paikkundliidsi kiili ütisüse tellitüq ettekandõq: 
 
-9.00 Allasõ Tiia. ...
+9.00 Allasõ Tiia. Võro keele oppus Vana Võromaa kool'en
 
-9.30 Kõivupuu Marju. Harglõ kandi rahvaluulõst, uskmiisist, luudusliisist pühäkotussist ja ristipuiõst.
+9.30 Fastrõ Mariko. Võro keelepesä
 
-10.00 Kohvi- ja tsäivaih kultuurimajan.
+10.00 Reimanni Nele, Hõrna Aare. Seto keele oppus Setomaal
 
-10.30 Allasõ Tiia. 20 aastakka Kauksi Ülle loominguga ehk ärtundmiisi taa tii päält.
+10.30 Palikova Oksana. Peipsi veere vinne kiil
 
-11.00 Krulli Hasso. Võromaa ja võrokeelitsest kirändüsest.
+Kellä 11-13 suvõülikooli keeleloenguq:
 
-11.30 Raudvasara Valdur. Käärmanni Alfred – legendaarnõ Harglõ mõtsaveli.
+11.00 Jüvä Sullõv. Võro-eesti internetisõnaraamat
+
+11.30 ...
 
 Mõtlõmistiatri edimäne puulpääväne ülesastminõ.
 
