*Empty MediaWiki Message*

--- a/Kaika_suvõülikuul_2013_Moosten.mw
+++ b/Kaika_suvõülikuul_2013_Moosten.mw
@@ -55,37 +55,36 @@ Kellä 11-13 suvõülikooli keeleloenguq:
 
 11.00 Jüvä Sullõv. Võro-eesti internetisõnaraamat
 
-11.30 ...
+11.30 Saarõ Evar. Sõna "mõisa" võro kotussõnimmin ja kuis Mooskatsi nimi sinnäq putus
 
-Mõtlõmistiatri edimäne puulpääväne ülesastminõ.
+12.00 Kalla Urmas. Mooste valla keele uurmisõst edimädsel Esti aol
 
-Puulpäävädse päävä latsiprogramm koolimaja man 9.00 – 12.00.
+Latsikoolitus loengidõ aigo.
 
-12.00 Lõunõsüük koolimajan.
+12.30 Lõunasüük koolimajan.
 
-13.00 – 18.00 Ekskursiooniq ja matkaq.
+14.00 – 18.00 Välläsõit bussiga.
 
-Tan jaetas seltskund katõs ja perän vaihtõdas seltskundõ. Vaihtus om kell 15.30.
-:- Bussiga sõit Koivaliina ja Taheva mõisahe – juhatasõq Pae Taavi ja Kõivupuu Marju.
-:- Jalaga käük Harglõn – kalmuaid, apteek, kerik jne – juhatas Kadaja Üllar.
-:- Ette teedä andnuilõ kanuusõit.
+:- Rasina asunikukülä
+:- Rasina mõisapark 
+:- Märtnä kabõlikotus
+:- Aarniku kääpäq
 
-18.00 Võrokeeline jumalateenistüs Harglõ kerikun. Salumäe Külli ja Hollo Toivo.
+18.00 Õdagusüük koolimajan.
 
-19.00 Õdagusüük koolimajan.
+19-st tegemiseq folgikuan
 
-20.00 Näütemängu-, laulu- ja filmiõdak ja simman kultuurimajan.
-:- Näüdätäs vällä vagivahtsit võrokeelitsit välläandit.
-:- Mõtlõmistiatri tõnõ ülesastminõ puulpäävädsel pääväl.
-:- Kaias vahtsõt lühifilmi „Savvusann vanal Võromaal“.
-:- Harglõ kooli latsi näütemänguq „Kaupmiis Tuutu ja Kratu“ ja „Bussijaaman“.
-:- Tal'na Võro Seldsi naisi lauluansambli „Liiso“ etteastminõ.
-:- Taheva valla latsi rahvatandsurühmä etteastminõ.
-:- Sõs esines paigapääline naisi rahvatandsurühm, kiä joba kõiki simmani alostusõs tandsma kutsvaq.
-:Simmanit vidä Laube Kadri üten Pillilaagri Pundiga.
+19.00 Näüdätäs vahtsit võrokiilsit välläandit; noidõ siän vahtsõq latsiraamatuq (Võro instituut) ja Pulga Jaani jutta plaat "Letipäälne elu", plaadist kõnõlõs Pulga Jaan esiq.
+
+20.00 Põlva liina esiqtegejide tiatri Kõivo Antsu tüküga "Perändüs"
+
+21.00 Tsimman
+
+:- rahvamuusikakooli pillimeheq mängväq seltskunnatandsa, Sildoja Krista kõnõlõs rahvamuusikakoolist
+:- laulõtas rahvalaula ja Podekrati Ülle kõnõlõs Moisekatsi Elohelüst
+:- üles astus uma kandi ansambli Julgur
 
 ===Pühäpäiv, 12. põimukuu päiv===
-[[Pilt:20120812_Kaika2012_Harglõ_kooli_latsõq.JPG|200px|thumb|Harglõ kooli latsõq laulvaq suvõülikoolist osavõtjilõ.]]
 
 8.00 Hummogusüük koolimajan.
 
