*Empty MediaWiki Message*

--- a/Kaika_suvõülikuul_2013_Moosten.mw
+++ b/Kaika_suvõülikuul_2013_Moosten.mw
@@ -1,6 +1,5 @@
 2013. aastagal peeti [[Kaika suvõülikuul]]i [[Põlva kihlkund|Põlva kihlkunnan]] [[Mooste]]n 9.-11. [[põimukuu]] pääväl. Suvõülikooli rektri oll' [[Kalla Urmas]] ja pääkõrraldaja oll' [[Mooste vald|Mooste vallavanõmb]] [[Needo Ülo]]. Suvõülikooli tegemiseq olliq [[Mooste mõisa]] huunin.
 
-<!--
 ==Kava==
 ===Riidi, 9. põimukuu päiv===
 12.00 Kokkosaaminõ, kirjapandminõ Mooste koolimaja man
@@ -88,20 +87,22 @@ Latsikoolitus loengidõ aigo.
 
 8.00 Hummogusüük koolimajan.
 
-9.00 – 10.30 Tsihilöüdmisega (orientiirümisega) matk Harglõ kooli lähkün.
-:Matka ettevalmistaja om Kotovi Toivo, kiä alostusõs rata, tsihilöüdmist ja kaardilugõmist lühkült oppas. Tett om kats marsruuti: pikemb ja lühemb, et inemise saassiq uma jovvu perrä hindäle parra valliq. 
-:Kiä tsihilöüdmise-matkalõ ei tahaq minnä, saa kävvü kaeman ökoküllä. Juhatas Raudsepä Kallõv. Buss ökoküllä lätt kell 9.00 Harglõ kooli mant.
+9.30 – 11.00 Loenguq koolimajan. 
 
-10.30 Kohvi- ja tsäivaih koolimajan.
+9.30 Lõbu Ragner. Uma (öko)maja
 
-11.00 – 12.00 Loenguq koolimajan: Võro liikminõ: suunaq ja tsihiq.
+10.00 Saava Astrid. Vesi - elo alos
 
-11.00 Kama Kaido. Võrokõisi lipu konkursist.
+10.30 Paalmani Kalju. Lina tähendüs Esti aoluun
 
-11.30 Kuuba Rainer. Võro instituudi tsihiq ja tsihikeseq.
+11.00 Tal'na võrokõisi näütemängopargiga Tungõl opitu tükü ettekandminõ Veskitiatrin
 
-Pühäpäävädse päävä latsiprogramm koolimaja man 11.00 – 12.00.
--->
+12.00 Suvõülikooli lõpõtaminõ härbäni iin
+
+12.30 Lõunasüük
+
+Latsikoolitus loengidõ aigo.
+
 
 ==Kirändüs==
 *Kaika suvõülikuul Moosteh 2013. aastaga 9.-11. põimukuud (suvõülikooli leht).
