The file [[:Image:POL_Racibórz_COA.svg]] has been replaced by [[:Image:POL_Racibórz_COA_old.svg]] by administrator [[:commons:User:Ymblanter]]: ''[[commons:COM:FR|File renamed]]: nieaktualny''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/Racibórz.mw
+++ b/Racibórz.mw
@@ -1,4 +1,4 @@
-[[Pilt:POL_Racibórz_COA.svg|right|thumb|200px|vapp]]
+[[Pilt:POL_Racibórz_COA_old.svg|right|thumb|200px|vapp]]
 
 '''Racibórz''' om Lõuna-[[Poola]] liin, kon elli 2009. aastagal 56 484 inemist.
 
