*Empty MediaWiki Message*

--- a/.al.mw
+++ b/.al.mw
@@ -1,4 +1,5 @@
 '''.al''' om [[Albaania]] [[Riigi internetitunnus|internetitunnus]]. 
+* [http://www.webhost.al/ .al Domain Registrar]
 
 {{Riike internetitunnussõq}}
 
