--- a/Wilde'i_Oscar.mw
+++ b/Wilde'i_Oscar.mw
@@ -1,5 +1,5 @@
 {{Elokäük
-|pilt=Oscar Wilde portrait.jpg
+|pilt=Oscar Wilde Sarony.jpg
 |pildiallkiri=Wilde'i Oscar 1882. aastagal
 |nimi=Wilde'i Oscar
 |umakeeline_nimi=Oscar Fingal O'Flahertie Wills Wilde
