*Empty MediaWiki Message*

--- a/Colombia.mw
+++ b/Colombia.mw
@@ -3,7 +3,7 @@ Nimi=Colombia|
 Genitiiv=Colombia|
 Lipp=Pilt:Flag of Colombia.svg|
 Vapp=Pilt:Coat of arms of Colombia.svg|
-Kaart=Pilt:Colombia (orthographic projection).svg|
+Kaart=Pilt:COL orthographic (San Andrés and Providencia special).svg|
 Riigikiil=[[hispaania kiil]]|
 Pääliin=[[Bogotá]]|
 Suurus=1 141 748|
