--- a/Läti.mw
+++ b/Läti.mw
@@ -8,7 +8,7 @@ Kaart=Image:LocationLatvia.png|
 Riigikiil'=[[läti kiil]]|
 Pääliin=[[Riia]]|
 Riigitüübi pää=President'|
-Riigipää=[[Valdis Zatlers]]|
+Riigipää=[[Andris Bērziņš]]|
 Pääministri=[[Valdis Dombrovskis]]|
 Suurus=64 589|
 Suurusõ perrä=121|
@@ -18,7 +18,7 @@ Rahva hulga perrä=137|
 Tihehüs=35,0|
 Hindäperi-1=|
 Hindäperi-2=|
-Raha=[[Läti latt']]|
+Raha=[[Õuro]]|
 Aig=[[Hummogu-Õuruupa aig]] (UTC+2)|
 Suvõaig=[[Hummogu-Õuruupa suvõaig]] (UTC+3)|
 Riigihümn'=[[Dievs, svētī Latviju!]]|
