--- a/Läti.mw
+++ b/Läti.mw
@@ -43,6 +43,7 @@ Lätin om neli suurt aoluulist ja kultuuripiirkunda: [[Kurzeme]], [[Zemgale]], [
 == Valitsõmisjaotus ==
 
 == Majandus ==
+2014. aastaga 1. vahtsõaastakuu pääväl võeti Lätin tarvitusõlõ [[õuro]].
 
 == Rahvastik ==
 
