*Empty MediaWiki Message*

--- a/Läti.mw
+++ b/Läti.mw
@@ -9,7 +9,7 @@ Riigikiil'=[[läti kiil]]|
 Pääliin=[[Riia]]|
 Riigitüübi pää=President'|
 Riigipää=[[Andris Bērziņš]]|
-Pääministri=[[Valdis Dombrovskis]]|
+Pääministri=[[Laimdota Straujuma]]|
 Suurus=64 589|
 Suurusõ perrä=121|
 Vett=1,5%|
